// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Absolute bottom left 1`] = `
<div>
  <div
    class="sc-bdvvaa iWJoHm"
  />
</div>
`;

exports[`Renders Absolute top right 1`] = `
<div>
  <div
    class="sc-bdvvaa bdJOJp"
  />
</div>
`;
